--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav>
             <ul class="header">
                 <li class="header"><a href="./index.html">Inicio</a></li>
-                <li class="header"><a href="./pages/carrito.html">Mi Carrito</a></li>
+                <li class="header"><a href="./pages/micarrito.html">Mi Carrito</a></li>
                 <li class="header"><a href="./pages/productos.html">Productos</a></li>
                 <li class="header"><a href="./pages/contacto.html">Contacto</a></li>
-                <li class="header"><a href="./pages/sobre nosotros.html">Sobre Nosotros</a></li>
+                <li class="header"><a href="./pages/sobrenosotros.html">Sobre Nosotros</a></li>
             </ul>
         </nav>
     </header>
