--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="../assets/img/vinilo-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilo/style.css">
     <title>Contacto</title>
 </head>
@@ -12,10 +14,10 @@
         <nav>
             <ul class="header">
                 <li class="header"><a href="../index.html">Inicio</a></li>
-                <li class="header"><a href="./carrito.html">Mi Carrito</a></li>
+                <li class="header"><a href="./micarrito.html">Mi Carrito</a></li>
                 <li class="header"><a href="./productos.html">Productos</a></li>
                 <li class="header"><a href="./contacto.html">Contacto</a></li>
-                <li class="header"><a href="./sobre nosotros.html">Sobre Nosotros</a></li>
+                <li class="header"><a href="./sobrenosotros.html">Sobre Nosotros</a></li>
             </ul>
         </nav>
     </header>
@@ -55,11 +57,21 @@
             <div class="footer">
                 <h5>Seguinos</h5>
                 <ul class="footer_list">
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">YouTube</a></li>
+                    <li><a href="">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li><a href="#">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    </li>
+                    <li><a href="#">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    </li>
                 </ul>
             </div>
+            <h4>Todos los derechos reservados por copyright</h4>
         </div>
     </footer>
 </body>
