implemente flexbox, imgs en webp

--- a/index.html
+++ b/index.html
@@ -22,22 +22,20 @@
         </nav>
     </header>
     <h2>¡Bienvenidos a Vinilo Club - Tu universo musical en vinilo!</h2>
-    <div>
-        <h3>
-        🎶 Descubre la magia del Sonido Analógico 🎶
-        </h3>
-    </div>
-    <p class="introduction">
-        En ViniloClub, creemos que la música no solo se escucha, sino que se siente. Por eso, te ofrecemos una colección exclusiva de vinilos que harán vibrar tu alma al ritmo de los clásicos eternos y las últimas novedades.
-    </p>
-    <h3>
-        Explora Nuestro Catálogo
-    </h3>
-    <ul class="text_1">
-        <li>• Clásicos Inolvidables: Desde los Beatles hasta Bowie, encuentra esas joyas musicales que han marcado generaciones.</li>
-        <li>• Nuevos Lanzamientos: Mantente al día con los artistas contemporáneos y las ediciones limitadas que todos desean.</li>
-        <li>• Rarezas y Ediciones Especiales: Para el coleccionista exigente, una selección de vinilos únicos que son verdaderas piezas de arte.</li>
-    </ul>
+    <section class="introduccion">
+        <div class="caja">
+            <h3>🎶 Descubre la magia del Sonido Analógico 🎶</h3>
+            <p>En ViniloClub, creemos que la música no solo se escucha, sino que se siente. Por eso, te ofrecemos una colección exclusiva de vinilos que harán vibrar tu alma al ritmo de los clásicos eternos y las últimas novedades.</p>
+        </div>
+        <div class="caja">
+            <h3>Explora Nuestro Catálogo</h3>
+                <ul>
+                    <li class="text_1">• Clásicos Inolvidables: Desde los Beatles hasta Bowie, encuentra esas joyas musicales que han marcado generaciones.</li>
+                    <li class="text_1">• Nuevos Lanzamientos: Mantente al día con los artistas contemporáneos y las ediciones limitadas que todos desean.</li>
+                    <li class="text_1">• Rarezas y Ediciones Especiales: Para el coleccionista exigente, una selección de vinilos únicos que son verdaderas piezas de arte.</li>
+                </ul>
+        </div>
+    </section>
     <div class="text_2">
         <p class="text_2_bold">Calidad que Podes Escuchar</p>
         <p>Cada vinilo es una promesa de calidad, con grabaciones meticulosas y prensados de alta fidelidad que garantizan la mejor experiencia auditiva.</p>
