--- a/pages/productos.html
+++ b/pages/productos.html
@@ -33,11 +33,10 @@
             Accesorios para Aficionados: Desde tocadiscos vintage hasta sistemas de sonido modernos, encuentra todo lo que necesitas para disfrutar de tu música al máximo.
         </li>
     </ul>
-
-    <!-- IMAGENES DE EJEMPLO -->
-    <img class="img_vinilo_1" width="320,5%" src="../assets/img/jhj_album.jpeg">
-    <img class="img_vinilo_2" width="320,5%" src="../assets/img/soda_album.jpg">
-    <img class="img_vinilo_3" width="320,5%" src="../assets/img/icehouse_album.jpg">
+    <!-- IMÁGENES PRODUCTOS -->
+    <img class="img_vinilo_1" width="320,5%" src="../assets/img/jhj_album.webp">
+    <img class="img_vinilo_2" width="320,5%" src="../assets/img/soda_album.webp">
+    <img class="img_vinilo_3" width="320,5%" src="../assets/img/icehouse_album.webp">
     <footer>
         <div>
             <div class="footer">
