--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -24,33 +24,35 @@
     <div>
         <h2>ViniloClub - Donde la Música Cobra Vida</h2>
         <h3>🎵 Sumérgete en el Universo del Vinilo 🎵</h3>
-        <p class="nosotros_bold">
-            Bienvenidos a ViniloClub
-        </p>
-        <p class="nosotros">
-            El santuario para los amantes del sonido puro y la calidad musical que solo el vinilo puede ofrecer. Nuestra pasión por la música nos impulsa a buscar y seleccionar los mejores vinilos, desde los clásicos atemporales hasta las novedades más vibrantes del panorama musical.
-        </p>
-        <p class="nosotros_bold">Nuestro Compromiso con la Calidad</p>
-        <p class="nosotros">
-            Cada disco en nuestra colección es una obra de arte auditiva. Nos aseguramos de que cada vinilo cumpla con los estándares más altos de calidad de sonido, preservando la riqueza y profundidad que caracteriza al formato analógico.
-        </p>
-        <p class="nosotros_bold">Experiencia Personalizada</p>
-        <p class="nosotros">
-            Entendemos que cada coleccionista es único. Por eso, ofrecemos asesoramiento personalizado para ayudarte a encontrar ese vinilo especial que estás buscando o para descubrir nuevos géneros y artistas que resonarán contigo.
-        </p>
-        <p class="nosotros_bold">Eventos y Comunidad</p>
-        <p class="nosotros">
-            Participa en nuestras ventas exclusivas, eventos de lanzamiento y encuentros de coleccionistas. En ViniloClub, no solo compras un disco; te unes a una comunidad de personas que comparten tu misma pasión.
-        </p>
-        <p class="nosotros_bold">Envío Seguro y Rápido</p>
-        <p class="nosotros">
-            Sabemos que deseas recibir tus vinilos lo antes posible y en perfecto estado. Por eso, trabajamos con los mejores servicios de mensajería para garantizar entregas rápidas y seguras a cualquier parte del mundo.
-        </p>
-        <p class="nosotros_bold">ViniloClub</p>
-        <p class="nosotros">
-            ViniloClub es tu puerta de entrada a un mundo donde la música no solo se escucha, sino que se vive. Cada vinilo que ofrecemos es una invitación a explorar sonidos, emociones y recuerdos.
-        </p>
-        <p class="nosotros_bold">¡Vení a explorar nuestra colección y encontrá el sonido que define tu vida!</p>
+        <section class="grid_container">
+            <div class="grid_item">
+                <p class="nosotros_bold">Bienvenidos a ViniloClub</p>
+                <p class="nosotros">El santuario para los amantes del sonido puro y la calidad musical que solo el vinilo puede ofrecer. Nuestra pasión por la música nos impulsa a buscar y seleccionar los mejores vinilos, desde los clásicos atemporales hasta las novedades más vibrantes del panorama musical.</p>
+            </div>
+            <div class="grid_item">
+                <p class="nosotros_bold">Nuestro Compromiso con la Calidad</p>
+                <p class="nosotros">Cada disco en nuestra colección es una obra de arte auditiva. Nos aseguramos de que cada vinilo cumpla con los estándares más altos de calidad de sonido, preservando la riqueza y profundidad que caracteriza al formato analógico.</p>
+            </div>
+            <div class="grid_item">
+                <p class="nosotros_bold">Experiencia Personalizada</p>
+                <p class="nosotros">Entendemos que cada coleccionista es único. Por eso, ofrecemos asesoramiento personalizado para ayudarte a encontrar ese vinilo especial que estás buscando o para descubrir nuevos géneros y artistas que resonarán contigo.</p>
+            </div>
+            <div class="grid_item">
+                <p class="nosotros_bold">Eventos y Comunidad</p>
+                <p class="nosotros">Participa en nuestras ventas exclusivas, eventos de lanzamiento y encuentros de coleccionistas. En ViniloClub, no solo compras un disco; te unes a una comunidad de personas que comparten tu misma pasión.</p>
+            </div>
+            <div class="grid_item">
+                <p class="nosotros_bold">Envío Seguro y Rápido</p>
+                <p class="nosotros">Sabemos que deseas recibir tus vinilos lo antes posible y en perfecto estado. Por eso, trabajamos con los mejores servicios de mensajería para garantizar entregas rápidas y seguras a cualquier parte del mundo.</p>
+            </div>
+            <div class="grid_item">
+                <p class="nosotros_bold">ViniloClub</p>
+                <p class="nosotros">ViniloClub es tu puerta de entrada a un mundo donde la música no solo se escucha, sino que se vive. Cada vinilo que ofrecemos es una invitación a explorar sonidos, emociones y recuerdos.</p>
+            </div>
+        </section>
+        <div>
+            <p class="nosotros_bold">¡Vení a explorar nuestra colección y encontrá el sonido que define tu vida!</p>
+        </div>
         <br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d152906.57467062294!2d-58.58396939371542!3d-34.63948005188005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9a7c2529ebb%3A0xe63c3580ad6d9869!2sFORMATO%20VINILO!5e0!3m2!1ses-419!2sar!4v1712092739298!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
