implemente media queries

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -34,9 +34,26 @@
         </li>
     </ul>
     <!-- IMÁGENES PRODUCTOS -->
-    <img class="img_vinilo_1" width="320,5%" src="../assets/img/jhj_album.webp">
-    <img class="img_vinilo_2" width="320,5%" src="../assets/img/soda_album.webp">
-    <img class="img_vinilo_3" width="320,5%" src="../assets/img/icehouse_album.webp">
+    <main class="tarjetas_productos">
+        <div class="tarjeta_album">
+            <img width="320,5%" src="../assets/img/jhj_album.webp">
+            <p>Banda: Johnny Hates Jazz</p>
+            <p>Album: Turn Back The Clock</p>
+            <p>Año: 1988</p>
+        </div>
+        <div class="tarjeta_album">
+            <img width="320,5%" src="../assets/img/soda_album.webp">
+            <p>Banda: Soda Stereo</p>
+            <p>Album: Soda Stereo</p>
+            <p>Año: 1984</p>
+        </div>
+        <div class="tarjeta_album">
+            <img width="320,5%" src="../assets/img/icehouse_album.webp">
+            <p>Banda: Icehouse</p>
+            <p>Album: Man Of Colours</p>
+            <p>Año: 1987</p>
+        </div>
+    </main>
     <footer>
         <div>
             <div class="footer">
