--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -54,7 +54,7 @@
             <p class="nosotros_bold">¡Vení a explorar nuestra colección y encontrá el sonido que define tu vida!</p>
         </div>
         <br>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d152906.57467062294!2d-58.58396939371542!3d-34.63948005188005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9a7c2529ebb%3A0xe63c3580ad6d9869!2sFORMATO%20VINILO!5e0!3m2!1ses-419!2sar!4v1712092739298!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d152906.57467062294!2d-58.58396939371542!3d-34.63948005188005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9a7c2529ebb%3A0xe63c3580ad6d9869!2sFORMATO%20VINILO!5e0!3m2!1ses-419!2sar!4v1712092739298!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <footer>
         <div>
