--- a/pages/productos.html
+++ b/pages/productos.html
@@ -35,23 +35,23 @@
     </ul>
     <!-- IMÁGENES PRODUCTOS -->
     <main class="tarjetas_productos">
-        <div class="tarjeta_album">
-            <img width="320,5%" src="../assets/img/jhj_album.webp">
-            <p>Banda: Johnny Hates Jazz</p>
-            <p>Album: Turn Back The Clock</p>
-            <p>Año: 1988</p>
+        <div class="tarjeta_container">
+            <img class="tarjeta_img" src="../assets/img/jhj_album.webp">
+            <p class="tarjeta_img">Banda: Johnny Hates Jazz</p>
+            <p class="tarjeta_img">Album: Turn Back The Clock</p>
+            <p class="tarjeta_img">Año: 1988</p>
         </div>
-        <div class="tarjeta_album">
-            <img width="320,5%" src="../assets/img/soda_album.webp">
-            <p>Banda: Soda Stereo</p>
-            <p>Album: Soda Stereo</p>
-            <p>Año: 1984</p>
+        <div class="tarjeta_container">
+            <img class="tarjeta_img" src="../assets/img/soda_album.webp">
+            <p class="tarjeta_img">Banda: Soda Stereo</p>
+            <p class="tarjeta_img">Album: Soda Stereo</p>
+            <p class="tarjeta_img">Año: 1984</p>
         </div>
-        <div class="tarjeta_album">
-            <img width="320,5%" src="../assets/img/icehouse_album.webp">
-            <p>Banda: Icehouse</p>
-            <p>Album: Man Of Colours</p>
-            <p>Año: 1987</p>
+        <div class="tarjeta_container">
+            <img class="tarjeta_img" src="../assets/img/icehouse_album.webp">
+            <p class="tarjeta_img">Banda: Icehouse</p>
+            <p class="tarjeta_img">Album: Man Of Colours</p>
+            <p class="tarjeta_img">Año: 1987</p>
         </div>
     </main>
     <footer>
